<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <ImageView
                    android:id="@+id/cover_imageview"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:maxHeight="300dp"
                    android:maxWidth="300dp"
                    app:srcCompat="@drawable/game_picture" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                        <Button
                            android:id="@+id/add_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:layout_marginStart="8dp"
                            android:text="Add" />
                        <Button
                            android:id="@+id/remove_button"
                            android:layout_width="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:layout_height="wrap_content"
                            android:text="Remove" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/item_title_textview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:elegantTextHeight="true"
                        android:gravity="center"
                        android:text="TextView"
                        android:textAlignment="center"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/release_date_textview"
                        android:layout_width="match_parent"
                        android:layout_height="29dp"
                        android:text="TextView"
                        android:textAlignment="center" />
                    <TextView
                        android:id="@+id/genre_textview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="TextView"
                        android:textAlignment="center"/>




                </LinearLayout>

            </LinearLayout>


            <TextView
                android:id="@+id/esrb_rating_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <TextView
                android:id="@+id/platform_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView" />


            <TextView
                android:id="@+id/developer_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <TextView
                android:id="@+id/publisher_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/user_impressions_list"/>

            <TextView
                android:id="@+id/description_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Review"
                />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/review_edittext"
                    />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Rating"
                />

            <RatingBar
                android:id="@+id/rating_bar_impression"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/send_impressions"
                    android:text="Send Impressions"
                    />

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>