<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@id/homeItem"
        android:icon="@android:drawable/ic_popup_reminder"
        android:title="Home" />
    <item
        android:id="@id/gameDetailsItem"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="Game details" />
    <item
        android:id="@id/favoritesItem"
        android:icon="@android:drawable/ic_menu_view"
        android:title="Favorite games" />
</menu>